--- a/Belief Agency Code Challenge/src/css/style.css
+++ b/Belief Agency Code Challenge/src/css/style.css
@@ -25,6 +25,11 @@ a {
   text-decoration: underline;
 }
 
+a:hover {
+  color: rgb(44,89,66);
+}
+
+
 h1, h2 {
   color: rgb(44,89,66);
   text-transform: uppercase;
@@ -35,6 +40,11 @@ h1, h2 {
   position: absolute;
   top: 0;
   width: 100%;
+}
+
+.nav > li > a:hover {
+  background-color: inherit;
+  color: rgb(251,117,16);
 }
 
 .seattle-logo {
@@ -56,7 +66,13 @@ h1, h2 {
   text-transform: uppercase;
   font-size: larger;
   font-weight: bold;
+  text-decoration: none;
 }
+
+.neighborhood .name:hover {
+  color: rgb(251,117,16);
+}
+
 
 .register {
   background-color: rgb(44,89,66);
@@ -92,6 +108,11 @@ h1, h2 {
   border: none;
   text-transform: uppercase;
   padding: .5em 1em;
+  font-weight: bold;
+}
+
+.register form button:hover {
+  color: rgb(44,89,66);
 }
 
 .video-container {
@@ -132,8 +153,3 @@ h1, h2 {
 }
 
 
-.footer .nav > li > a:hover {
-  background-color: inherit;
-  color: rgb(251,117,16);
-  text-decoration: underline;
-}
