correctly positioning top nav and top banner

--- a/Belief Agency Code Challenge/src/css/style.css
+++ b/Belief Agency Code Challenge/src/css/style.css
@@ -1,13 +1,18 @@
+.top-nav {
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
 .pike-place-header {
   padding: 0;
-  height: 600px;
-  position: relative;
+  background-image: url('Images/Seattle-Hero.jpg');
+  width: 100%;
+  margin-top: -300px;
 }
 
 .pike-place-header img {
   width: 100%;
-  position: absolute;
-  bottom: 0;
 }
 
 .green-bg {
@@ -33,13 +38,6 @@ a:hover {
 h1, h2 {
   color: rgb(44,89,66);
   text-transform: uppercase;
-}
-
-.top-nav {
-  padding: 1em;
-  position: absolute;
-  top: 0;
-  width: 100%;
 }
 
 .nav > li > a:hover {
