--- a/Belief Agency Code Challenge/src/css/style.css
+++ b/Belief Agency Code Challenge/src/css/style.css
@@ -66,15 +66,27 @@ h1, h2 {
 .neighborhood .name {
   color: rgb(44,89,66);
   text-transform: uppercase;
-  font-size: larger;
+  font-size: x-large;
   font-weight: bold;
   text-decoration: none;
+
+  display: block;
+  padding-top: .5em;
 }
 
 .neighborhood .name:hover {
   color: rgb(251,117,16);
 }
 
+.neighborhood .description {
+  margin-bottom: 2em;
+}
+
+.more-neighborhoods {
+  display: block;
+  font-size: x-large;
+  margin-bottom: 3em;
+}
 
 .register {
   background-color: rgb(44,89,66);
