--- a/Belief Agency Code Challenge/src/css/style.css
+++ b/Belief Agency Code Challenge/src/css/style.css
@@ -2,10 +2,9 @@ body {
   font-family: Georgia, serif;
 }
 
-.top-nav .container {
-  padding-top: 5px;
-  padding-bottom: 5px;
-  margin: 0;
+.top-nav {
+  padding: 0;
+  border: none;
 }
 
 .top-nav a {
@@ -34,6 +33,7 @@ body {
 .green-bg {
   background-color: rgb(44,89,66);
   border: none;
+  border-radius: 0;
 }
 
 a {
